Fixing covered-up header

--- a/assets/css/33d.css
+++ b/assets/css/33d.css
@@ -183,7 +183,7 @@ a:hover, span.link:hover {
 	border-bottom: 1px solid #CCCCCC;
 	padding: 20px;
 	margin-bottom: 20px;
-	padding-top: 50px;
+	padding-top: 150px;
 }
 
 #main-header h2 {
